...
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="#f2f5df"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/singleCardRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp">

            <TextView
                android:id="@+id/schoolName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:textSize="18sp"
                android:gravity="center"
...
